# testausuptime

./: Cargo.toml  settings.toml.example
src/: main.rs  website.rs
templates/: base.html  index.html
