[package]
name = "testausuptime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde_derive = "1.0"
serde = "1.0"
toml = "0.5"
env_logger = "0.9"
tera = "1.15"
actix-web = "4.1"
dotenv = "0.15"
awc = "3"
clokwerk = "0.4.0-rc1"
futures = "0.3"
tokio = "1.2"
async-trait = "0.1"
reqwest = "0.11"
